--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "express": "^4.17.1",
+    "qs": "^6.8.0",
     "vant": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-waterfall": "^1.0.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
